--- a/views/home.html
+++ b/views/home.html
@@ -14,13 +14,13 @@ rel="stylesheet" />
     <title>Mercado Liebre</title>
 </head>
 <body>
-    <header class="main-header">
+<header class="main-header">
         <div class="main-header-top-bar">
             <img src="/images/logo-mercado-liebre.svg" class="logo">
-        </div>
-        <form action= "search" class="search-bar"> 
+            <form action= "search" class="search-bar">
             <input type="text" name="search" placeholder="Buscar productos, marcas y más"> <i class="fas fa-search"></i>
-        </form>
+            </form>
+        </div>
            
         <div>
             <h2 class="copy-header">
@@ -43,86 +43,112 @@ rel="stylesheet" />
                 <li><a href="#"> Compra <i class="fas fa-shopping-cart"></i> </a></li>
             </ul>
         </nav>
-    </header>
-
-    <main>
-        <section>
+</header>
+<section class="banner">
+    <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
+</section>      
+<main>
+    <section class="ultima-visita">
         <h2>Basado en tu última visita</h2>
             <div class="productos">
             <article>
                 <img src= "/images/img-cafetera-moulinex.jpg" width="300" height="300">
-            <div><i class="fas fa-truck"></i>
+            <div class="producto-venta">
+                <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios"> $6.770 </p>
                 <p class="descuentos">40% OFF</p>
-                <p class="descripciones"><strong>Cafetera Moulinex</strong></p>
+                </div>
             </div>
+            <h4 class="descripciones">Cafetera Moulinex</h4>
             </article>
             <article>
                 <img src= "/images/img-macbook-pro-2019.jpg" width="300" height="300">
-            <div><i class="fas fa-truck"></i>
+            <div class="producto-venta">
+                <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios">$230.000</p>
                 <p class="descuentos">20% off</p>
-                <p class="descripciones"><strong>MacBook Pro 2019</strong></p>
+                </div>
             </div>
+            <h4 class="descripciones">MacBook Pro 2019</h4>
             </article>
             <article>
                 <img src= "/images/img-samsung-galaxy-s10.jpg" width="300" height="300">
-            <div><i class="fas fa-truck"></i>
+            <div class="producto-venta">
+                <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios">$70.500</p>
                 <p class="descuentos">10% off</p>
-                <p class="descripciones"><strong>Samsung Galaxy S10</strong></p>
+                </div>
             </div>
+            <h4 class="descripciones">Samsung Galaxy S10</h4>
             </article>
             <article>
                 <img src= "/images/img-tv-samsung-smart.jpg" width="300" height="300">
-            <div><i class="fas fa-truck"></i>
+            <div class="producto-venta">
+                <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios">$23.200</p>
                 <p class="descuentos">5% off</p>
-                <p class="descripciones"><strong>SmartTv Samsung 43"</strong></p>
+                </div>
             </div>
+            <h4 class="descripciones">SmartTv Samsung 43"</h4>
             </article>
-        </section>
-        <br> 
+    </section>
         
-        <section>
+    <br> 
+        
+    <section>
             <h2>Sección de Ofertas</h2>
             <div class="productos">
              <article>
                 <img src= "/images/img-cafetera-moulinex.jpg" width="300" height="300">
-            <div>
+            <div class="producto-venta">
                 <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios">$6.770</p>
                 <p class="descuentos">40% off</p>
-                <p class="descripciones"><strong>Cafetera Moulinex</strong></p>
+                </div>
             </div>   
+            <h4 class="descripciones">Cafetera Moulinex</h4>
             </article>
             <article>
                 <img src= "/images/img-macbook-pro-2019.jpg" width="300" height="300">
-            <div><i class="fas fa-truck"></i>
+            <div class="producto-venta">
+                <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios">$230.000</p>
                 <p class="descuentos">20% off</p>
-                <p class="descripciones"><strong>MacBook Pro 2019</strong></p>
+                </div>
             </div>
+            <h4 class="descripciones">MacBook Pro 2019</h4>
             </article>
             <article>
                 <img src= "/images/img-samsung-galaxy-s10.jpg" width="300" height="300">
-            <div><i class="fas fa-truck"></i>
+            <div class="producto-venta">
+                <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios">$70.500</p>
                 <p class="descuentos">10% off</p>
-                <p class="descripciones"><strong>Samsung Galaxy S10</strong></p>
+                </div>
             </div>
+            <h4 class="descripciones">Samsung Galaxy S10</h4>
             </article>
             <article>
                 <img src= "/images/img-tv-samsung-smart.jpg" width="300" height="300">
-            <div><i class="fas fa-truck"></i>
+            <div class="producto-venta">
+                <i class="fas fa-truck"></i>
+                <div class="caja-venta">
                 <p class= "precios">$23.200</p>
                 <p class="descuentos">5% off</p>
-                <p class="descripciones"><strong>SmartTv Samsung 43"</strong></p>
+                </div>
             </div>
+            <h4 class="descripciones">SmartTv Samsung 43"</h4>
             </article>
         </div>
-        </section>
-    </main>
+    </section>
+</main>
 
     
     <footer>
