--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body{
@@ -16,34 +15,43 @@ div .input {
     background-color: white;
     border: solid 1px black;
     width: 40%;
-    
 }
 
 div .submit{
     background-color: #FFF;
     border: 1px solid #000;
     width: 10%;
-    
 }
 
-.logo {
+.main-header-top-bar .logo {
     width: 50%
 }
 
+.main-header {
+    width: 100%;
+    margin: 0;
+    padding: 5px 5px;
+    background-color: #EAC926;
+    
+}
 
 .main-header-top-bar {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    margin: 5px;
+    width: 90%;
 }
 
-form .search-bar {
+
+form.search-bar {
     background-color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    font-size: smaller;
     width: 50%;
-
+    height: 10vh;
 }
 
 .search-bar input {
@@ -51,12 +59,18 @@ form .search-bar {
     outline: none;
 }
 
+.copy-header {
+    font-weight: 400;
+    text-align: center;
+}
+
 p {
     font-size: 12px;
 }
 
+
 h2 {
-    font-size: 24px;
+    font-size: 20px;
     margin-bottom: 25px;
     margin-top: 25px;
 }
@@ -73,6 +87,7 @@ p.descuentos {
 div.burger-menu{
     text-align: center;
 }
+
 div.burger-menu i{
     background-color: #0044AA;
     border-radius: 5px;
@@ -82,18 +97,6 @@ div.burger-menu i{
     padding: 10px;
 }
 
-.main-header {
-    background-color: #EAC926;
-    padding: 20px;
-}
-
-
-
-
-.copy-header {
-    font-weight: 400;
-    text-align: center;
-}
 
 .hamburguer-button {
     background-color: #03264C;
@@ -133,67 +136,109 @@ div.burger-menu i{
     font-size: 12px;
 }
 
-/* Main */
 
-.main {
+
+
+/* main - home */
+
+main {
     width: 90%;
+    box-sizing: border-box;
+    /* display: block; */
+}
+
+section.banner img {
+    width: 100%;
     display: block;
-    padding: 10px;
-
-}
-
-section {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-div .fa-truck {
-    color: #39b54a;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box ;
-}
-
-.main section article {
-    border: 15px;
-    margin: 10px 10px;
-    background-color: #fff;
-    text-align: left;
-}
-
-.main section article img {
-    width: 100%;
-}
-
-div article .productos {
-    width: 100%;
-    border-top: 1px solid #ebebeb;
-    padding: 15px;
-    text-align: left;
-    
-}
-
-div i .precios .descuentos .descripciones {
-    text-align: left;
 }
 
 
+.precios {
+    font-size: 18px;
+}
+
+.descuentos,
+.descripciones{
+    font-size: 16px;
+    font-weight: normal;
+}
+
+h4,
+.descripciones{
+    color: #666;
+    font-weight: bold;
+}
 
 .descripciones {
-    font-size: 16px;
+    transition: all 2s;
+    margin-top: 20px;
+}
+
+main{
+    width: 90%;
+    margin: 10px 10px;
     
 }
 
+main section article {
+    background-color: #fff;    
+    margin: 10px 0px;
+    padding: 5px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 10px;
+}
 
+main section article img{
+    width: 100%;
+}
+
+main section article i,
+.descuentos{
+    color: #39b54a;
+}
+
+main section article i {
+    font-size: 16px;
+    padding: 10px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: absolute;
+    right: 25px;
+    top: -20px;
+}
+main section article i:hover {
+    transform: rotate(360deg);
+    transition: transform 2s;
+}
+main section h4{
+    margin: 20px 0px;
+}
+
+article div.producto-venta {
+    width: 100%;
+    border-top: 1px solid #ebebeb;
+    padding: 5px;
+    position: relative;
+}
+.caja-venta {
+    display: flex;
+}
+.caja-venta .precios {
+    width: 40%;
+}
+.caja-venta .descuentos {
+    width: 60%;
+}
+
+/* footer */
 
 footer {
     text-align: center;
     background-color: white;
-    padding: 10px;
     margin: 10px 10px;
-    
+    width: 90%;
+    padding: 10px;
 }
 
 footer p {
@@ -229,85 +274,14 @@ footer h4 {
 }
 
 
-.registro {
-    padding: 20px 15px;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
 
-.login {
-    padding: 20px 15px;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-.error {
-    font-style: italic;
-    color: red;
-    content: "Verifica que el contenido sea correcto";
-}
-
-.error {
-    font-style: italic;
-    color: red;
-    content: "Debes elegir una opción";
-}
-
-.error-repassword {
-    font-style: italic;
-    color: red;
-    content: "Verifica que las contraseñas coincidan";
-}
-
-.controlDelFormulario {
-    margin-bottom: 15px;
-    font-weight: bold;
-}
-
-.controlCategorias label{
-    margin-bottom: 15px;
-    font-style: italic;
-    display: block;
-    
-}
-
-.controlDelFormulario label {
-    margin-bottom: 15px;
-    font-style: italic;
-    display: block;
-
-}
-
-.control {
-    width: 100%;
-    padding: 8px;
-}
-
-.repassword {
-    width: 100%;
-    padding: 8px;
-    display: block;
-}
-
-
-.boton-formulario {
-    background-color: #39b54a;
-    border: none;
-    font-size: 20px;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
+/* media queries */
 
 
 
 @media (min-width: 361px) {
     
-    .productos { 
+    div .productos { 
     display: flex; 
     flex-direction: row; 
     flex-wrap: wrap; 
@@ -318,20 +292,8 @@ footer h4 {
         width: 45%;
     }
 
-    main {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        
-    }
-
-    .main-header-top-bar {
-        display: flex;
-        justify-content: space-between;
-    }
     .copy-header {
-        max-width: 350px;
-        text-align: right;
+        text-align: center;
     }
     .hamburguer-button {
         display: none;
@@ -347,37 +309,72 @@ footer h4 {
     .main-navbar li {
         margin: 0 5px;
     }
+    .banner img{
+        display: none;
+    }
     
+    main section .productos {
+        margin: auto; 
+        padding: auto;
+    }
+
     main section article img {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
         align-items: stretch;
-        box-shadow: 0px 0px 10px;
         color: 100, 100, 100 
-}
-
-    main section article .description{
-            display: block;
-        }
-}
-
-@media (min-width: 769px) {
-    .logo {
-        width: 250px;
     }
+
+    .productos { 
+        display: flex; 
+        flex-wrap: wrap; 
+        justify-content: space-around;
+    }
+
+    main section article .caja-venta {
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    p.descuentos {
+        text-align: right;
+    }
+
+    main section article .descripciones{
+            display: none;
+        }
+    }
+
+    main section article:hover .descripciones {
+        opacity: 1;
+    }
+    main section article:hover {
+        box-shadow: 0px 0px 25px rgb(100, 100, 100);
+    }
+
+
+
+
+
+    
+
+@media (min-width: 769px){ 
+
+    .main-header-top-bar .logo { 
+        width: 250px; 
+    } 
     .main-header-top-bar, .main-navbar {
-        max-width: 1200px;
+        max-width: 1200px; 
         margin: auto;
     }
-    .main-header-top-bar {
-        align-items: center;
-    }
+
     .copy-header {
         max-width: none;
         font-size: 18px;
         font-weight: 400px;
-        margin: 0;
+        margin: 25px;
     }
     .main-navbar {
         margin-top: 50px;
@@ -388,9 +385,56 @@ footer h4 {
     .main-navbar a {
         font-size: 19px;
     }
-
     main section article {
         box-shadow: 0px 0px 10px;
         color: 100, 100, 100 
     }
+
+    div .productos { 
+        display: flex; 
+        flex-direction: row; 
+        flex-wrap: wrap; 
+        justify-content: space-around
+    }
+
+    main section .productos{
+        display: flex;
+        box-sizing: border-box;
+        justify-content: space-around;
+        align-items: stretch;
+    }
+
+    main section article img {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: stretch;
+        color: 100, 100, 100 
+    }
+
+    .productos article {
+        width: 22%;
+    }
+
+    .main-header-top-bar {
+        align-items: center;
+    }
+
+    main section article .caja-venta {
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    main section article .descripciones{
+        display: flex;
+    }
+
+    main section article:hover .descripciones {
+    opacity: 1;
+    }
+
+    main section article:hover {
+    box-shadow: 0px 0px 25px rgb(100, 100, 100);
+}
 }
