--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,7 +237,7 @@ footer {
     text-align: center;
     background-color: white;
     margin: 10px 10px;
-    width: 90%;
+    width: 95%;
     padding: 10px;
 }
 
@@ -274,8 +274,42 @@ footer h4 {
 }
 
 
+/*Formulario*/
 
-/* media queries */
+
+.createform {
+    padding: 20px 15px;
+    
+}
+
+.controlDelFormulario {
+    margin-bottom: 15px;
+}
+
+.controlDelFormulario label {
+    margin-bottom: 15px;
+    font-style: italic;
+    display: block;
+}
+
+.control {
+    width: 100%;
+    padding: 8px;
+}
+
+.boton-formulario {
+    background-color: #39b54a;
+    border: none;
+    font-size: 20px;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+
+
+
+/* Media queries */
 
 
 
@@ -312,12 +346,14 @@ footer h4 {
     .banner img{
         display: none;
     }
-    
-    main section .productos {
-        margin: auto; 
-        padding: auto;
-    }
 
+    main {
+        width: 95%;
+    }
+    main section .ultima-visita {
+        width: 90%;
+    }
+                    
     main section article img {
         display: flex;
         flex-wrap: wrap;
@@ -385,6 +421,14 @@ footer h4 {
     .main-navbar a {
         font-size: 19px;
     }
+
+    main {
+        width: 98%;
+    }
+    main section .ultima-visita {
+        width: 100%;
+    }
+
     main section article {
         box-shadow: 0px 0px 10px;
         color: 100, 100, 100 
@@ -436,5 +480,10 @@ footer h4 {
 
     main section article:hover {
     box-shadow: 0px 0px 25px rgb(100, 100, 100);
-}
+    }
+
+    footer {
+        width: 98%;
+        padding: 5px;
+    }
 }
